Build the tree, chop it down