@@ -3,6 +3,13 @@ plugins {
     id 'application'
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+run {
+    jvmArgs(['--enable-preview'])
+}
 
 def mainClassName = 'org.tlangs.Main'
 jar {
